--- a/Struts_scl/WebContent/WEB-INF/web.xml
+++ b/Struts_scl/WebContent/WEB-INF/web.xml
@@ -3,9 +3,6 @@
 	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	id="WebApp_ID" version="3.1">
-	<display-name>Struts_scl</display-name>
-
-
 	<display-name>Struts_start</display-name>
 	<filter>
 		<filter-name>struts2</filter-name>
@@ -16,6 +13,21 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<welcome-file-list>
-	<welcome-file>login/login.jsp</welcome-file>
+		<welcome-file>login/login.jsp</welcome-file>
+	</welcome-file-list>
+	
+
+	<display-name>Struts_Ognl</display-name>
+	<filter>
+		<filter-name>struts3</filter-name>
+		<filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>struts3</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
