--- a/Struts_scl/WebContent/WEB-INF/web.xml
+++ b/Struts_scl/WebContent/WEB-INF/web.xml
@@ -30,4 +30,20 @@
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
+	
+	<display-name>Struts_UItags</display-name>
+<!-- 配置项目启动后的默认首页 -->
+	<welcome-file-list>
+		<welcome-file>indexUItags.jsp</welcome-file>
+	</welcome-file-list>
+<!-- 	配置struts2的装备与执行过滤器 -->
+	
+	<filter>
+		<filter-name>struts4</filter-name>
+		<filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>struts4</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
